cmake_minimum_required(VERSION 3.5)
project(blackandgold_msgs)

# Default to C99
if(NOT CMAKE_C_STANDARD)
  set(CMAKE_C_STANDARD 99)
endif()

# Default to C++14
if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 14)
endif()

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(builtin_interfaces REQUIRED)
find_package(std_msgs REQUIRED)
find_package(autoware_auto_perception_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)

find_package(rosidl_default_generators REQUIRED)

rosidl_generate_interfaces(${PROJECT_NAME}
"msg/CarProximityReport.msg"
"msg/ErrorReport.msg"
"msg/CameraBox.msg"
"msg/CameraBoundingBoxes.msg"
"msg/ObjectCount.msg"
"msg/WallProximityReport.msg"
"msg/BasestationCommand.msg"
"msg/PathOffsetCommand.msg"
"msg/BoundingBoxWithPathArray.msg"
"msg/BoundingBoxWithPath.msg"
"msg/TrackedObjectWithPath.msg"
"msg/TrackedObjectWithPathArray.msg"
"msg/ClusterArray.msg"
"srv/StateControl.srv"
"msg/Polynomial4Array.msg"
"msg/Polynomial4.msg"
"msg/ADRC.msg"
"msg/SpeedReferenceRequest.msg"
DEPENDENCIES builtin_interfaces std_msgs autoware_auto_perception_msgs geometry_msgs sensor_msgs
ADD_LINTER_TESTS
)




# further dependencies manually.
# find_package(<dependency> REQUIRED)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # uncomment the line when a copyright and license is not present in all source files
  #set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # uncomment the line when this package is not in a git repo
  #set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
