<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>repub</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="blackandgold@todo.todo">blackandgold</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Add message dependencies -->
  <build_depend>blackandgold_msgs</build_depend>
  <exec_depend>blackandgold_msgs</exec_depend>
  <build_depend>autonoma_msgs</build_depend>
  <exec_depend>autonoma_msgs</exec_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>autoware_auto_msgs</build_depend>
  <exec_depend>autoware_auto_msgs</exec_depend>



  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
